--- a/warsztaty/portfolio/css/style.css
+++ b/warsztaty/portfolio/css/style.css
@@ -303,7 +303,11 @@ footer p {
 }
 
 @media all and (max-width : 1200px)
-@media all and (max-width : 992px)   
+@media all and (max-width : 992px) 
+    .main-header-content {
+        padding: 10%;
+        
+}
 @media all and (max-width : 768px) 
     * {
         padding: 0 40px 50px;
@@ -316,3 +320,4 @@ h2 {font-size: 1.5em;}
      * {
         padding: 0 10px 30px;
 }
+
