--- a/dantex/css/style.css
+++ b/dantex/css/style.css
@@ -97,17 +97,18 @@ footer {
     width: 180px;
     border: 0px;
     margin-right: 50px;
+    margin-bottom: 50px;
     font-size: 24px;
     font-weight: 500;
     font-family: "Rajdhani";
 
 }
 
-#buttons #btn-red {
+#btn-red {
     background-color: #d9232e;
 }
 
-#buttons #btn-green {
+#btn-green {
     background-color: #57a800;
 }
 
