--- a/dantex/css/style.css
+++ b/dantex/css/style.css
@@ -4,6 +4,7 @@
 
 body {
     background-color: #edebee;
+    background-color: red;
     background-image: url('/img/backgroun-newsletter.svg');
     background-repeat: no-repeat;
     background-position: 110% 40%;
