--- a/dantex/css/style.css
+++ b/dantex/css/style.css
@@ -1,32 +1,35 @@
 /*general style start*/
 * {
-    margin: 0 auto;}
-
+    margin: 0 auto;
+}
 body {
-    background-color: #edebee;
-    background-image: url('/img/backgroun-newsletter.svg');
-    background-repeat: no-repeat;
-    background-position: 110% 40%;
     width: 100%;
     height: 100vh;
     min-height:100vh;
-    overflow: hidden;
     color: #231f20;
     font-family: "Rajdhani", sans-serif;
     font-size: 1em;
+    margin: 0px;
 
 }
 
+/*
 section, #main-header img {
     padding-left: 10%;
     padding-top: 2vh;
 }
+*/
 
 #main-header,
 footer {
     background-color: #fff; 
 }
+
 #content {
+    background-color: #edebee;
+    background-image: url('/img/backgroun-newsletter.svg');
+    background-repeat: no-repeat;
+    background-position: 110% 40%;
     max-height: 70vh;
     min-height: 70vh;
 }
@@ -35,13 +38,20 @@ footer {
 /*header start*/
 #main-header {
     height: 15vh;
-    position: relative
+    position: relative;
+    min-height: 60px;
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: left;
 }
 
 #main-header img {
     height: 5vh;
-    position: absolute;
-    transform: translateY(2.5vh);
+    min-height: 31px;
+
+
 }
 
 /*header stop*/
@@ -95,11 +105,11 @@ footer {
 
 .button {
     border-radius: 8px;
-    padding: 1.2vh 1.5vh;
+    padding: 10px 0;
     color: #fff;
     width: 12vw;
     border: 0px;
-    margin-bottom: 43em;
+    margin-bottom: 10em;
     margin-right: 4em;
     font-size: 1em;
     font-weight: 500;
@@ -119,8 +129,11 @@ footer {
 
 /*footer start*/
 
-footer div {
-    height: 15vh;
+footer {
+    min-height: 15vh;
+    display: flex;
+    justify-content:  center;
+    align-items: center;
     width: 100%;
     background-color: #fff;
 }
