--- a/dantex/css/style.css
+++ b/dantex/css/style.css
@@ -3,12 +3,12 @@
 body {
     width: 100%;
     height: 100vh;
-    min-height: 650px;
+
     color: #231f20;
     font-family: "Rajdhani", sans-serif;
     font-size: 1em;
     margin: 0;
-    overflow: scroll;
+    overflow: hidden;
 
 }
 
@@ -22,10 +22,9 @@ footer {
     background-image: url('../img/backgroun-newsletter.svg');
     background-repeat: no-repeat;
     background-position: 90% 40%;
-    max-height: 70vh;
     min-height: 70vh;
     max-width: 1850px;
-    margin: 0 auto;
+    margin: 0;
     padding: 30px;
 
 }
@@ -35,7 +34,6 @@ footer {
 /*header start*/
 
 #main-header {
-    width: 100%;
     height: 15vh;
     min-height: 60px;
     max-width: 1850px;
