--- a/dantex/css/style.css
+++ b/dantex/css/style.css
@@ -1,51 +1,23 @@
 /*general style start*/
-<<<<<<< HEAD
 
 body {
     width: 100%;
     height: 100vh;
-
     color: #231f20;
     font-family: "Rajdhani", sans-serif;
     font-size: 1em;
     margin: 0;
-    overflow: hidden;
 
-=======
-* {
-    margin: 0 auto;
-}
-body {
-    width: 100%;
-    height: 100vh;
-    min-height:100vh;
-    color: #231f20;
-    font-family: "Rajdhani", sans-serif;
-    font-size: 1em;
-    margin: 0px;
 
 }
-
-/*
-section, #main-header img {
-    padding-left: 10%;
-    padding-top: 2vh;
->>>>>>> 9b6e6e22444d216a4336a84c8dfd18f664b096b8
-}
-*/
 
 #main-header,
 footer {
-<<<<<<< HEAD
     background-color: #fff;
-=======
-    background-color: #fff; 
->>>>>>> 9b6e6e22444d216a4336a84c8dfd18f664b096b8
 }
 
 #content {
     background-color: #edebee;
-<<<<<<< HEAD
     background-image: url('../img/backgroun-newsletter.svg');
     background-repeat: no-repeat;
     background-position: 90% 40%;
@@ -56,29 +28,10 @@ footer {
 
 }
 
-=======
-    background-image: url('/img/backgroun-newsletter.svg');
-    background-repeat: no-repeat;
-    background-position: 110% 40%;
-    max-height: 70vh;
-    min-height: 70vh;
-}
->>>>>>> 9b6e6e22444d216a4336a84c8dfd18f664b096b8
 /*general style stop*/
 
 /*header start*/
-#main-header {
-    height: 15vh;
-    position: relative;
-    min-height: 60px;
-    max-width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: left;
-}
 
-<<<<<<< HEAD
 #main-header {
     height: 15vh;
     min-height: 60px;
@@ -88,12 +41,6 @@ footer {
     align-items: center;
 
 }
-=======
-#main-header img {
-    height: 5vh;
-    min-height: 31px;
-
->>>>>>> 9b6e6e22444d216a4336a84c8dfd18f664b096b8
 
 #main-header img {
     height: 5vh;
@@ -104,13 +51,10 @@ footer {
 
 /*main-info start*/
 
-<<<<<<< HEAD
 #main-info p {
     margin: 0px;
 }
 
-=======
->>>>>>> 9b6e6e22444d216a4336a84c8dfd18f664b096b8
 #main-info p:first-child {
     color: #d9232e;
     font-size: 1.8em;
@@ -139,11 +83,7 @@ footer {
 
 #icon figure p {
     font-size: 0.9em;
-<<<<<<< HEAD
 
-=======
-  
->>>>>>> 9b6e6e22444d216a4336a84c8dfd18f664b096b8
 }
 
 /*section icon stop*/
@@ -164,10 +104,10 @@ footer {
     border-radius: 8px;
     padding: 10px 0;
     color: #fff;
-    width: 12vw;
+    width: 10vw;
     border: 0px;
     margin-bottom: 10em;
-    margin-right: 4em;
+    margin-right: 4vw;
     font-size: 1em;
     font-weight: 500;
     font-family: "Rajdhani";
@@ -189,25 +129,14 @@ footer {
 footer {
     min-height: 15vh;
     display: flex;
-<<<<<<< HEAD
     justify-content: center;
-=======
-    justify-content:  center;
->>>>>>> 9b6e6e22444d216a4336a84c8dfd18f664b096b8
     align-items: center;
     width: 100%;
     background-color: #fff;
 }
-<<<<<<< HEAD
 
 /*footer stop*/
 
 .remove {
     display: none;
 }
-=======
-/*footer stop*/
-.remove {
-    display: none;
-}
->>>>>>> 9b6e6e22444d216a4336a84c8dfd18f664b096b8
