dodanie flexa i responsywności

--- a/dantex/css/style.css
+++ b/dantex/css/style.css
@@ -1,62 +1,59 @@
 /*general style start*/
-* {
-    margin: 0 auto;
-}
+
 body {
     width: 100%;
     height: 100vh;
-    min-height:100vh;
     color: #231f20;
     font-family: "Rajdhani", sans-serif;
     font-size: 1em;
-    margin: 0px;
+    margin: 0;
+
 
 }
-
-/*
-section, #main-header img {
-    padding-left: 10%;
-    padding-top: 2vh;
-}
-*/
 
 #main-header,
 footer {
-    background-color: #fff; 
+    background-color: #fff;
 }
 
 #content {
     background-color: #edebee;
-    background-image: url('/img/backgroun-newsletter.svg');
+    background-image: url('../img/backgroun-newsletter.svg');
     background-repeat: no-repeat;
-    background-position: 110% 40%;
-    max-height: 70vh;
+    background-position: 90% 40%;
     min-height: 70vh;
+    max-width: 1850px;
+    margin: 0;
+    padding: 30px;
+
 }
+
 /*general style stop*/
 
 /*header start*/
+
 #main-header {
     height: 15vh;
-    position: relative;
     min-height: 60px;
-    max-width: 1200px;
+    max-width: 1850px;
     margin: 0 auto;
     display: flex;
     align-items: center;
-    justify-content: left;
+
 }
 
 #main-header img {
     height: 5vh;
     min-height: 31px;
-
-
 }
 
 /*header stop*/
 
 /*main-info start*/
+
+#main-info p {
+    margin: 0px;
+}
 
 #main-info p:first-child {
     color: #d9232e;
@@ -86,7 +83,7 @@ footer {
 
 #icon figure p {
     font-size: 0.9em;
-  
+
 }
 
 /*section icon stop*/
@@ -107,10 +104,10 @@ footer {
     border-radius: 8px;
     padding: 10px 0;
     color: #fff;
-    width: 12vw;
+    width: 10vw;
     border: 0px;
     margin-bottom: 10em;
-    margin-right: 4em;
+    margin-right: 4vw;
     font-size: 1em;
     font-weight: 500;
     font-family: "Rajdhani";
@@ -132,12 +129,14 @@ footer {
 footer {
     min-height: 15vh;
     display: flex;
-    justify-content:  center;
+    justify-content: center;
     align-items: center;
     width: 100%;
     background-color: #fff;
 }
+
 /*footer stop*/
+
 .remove {
     display: none;
 }
