--- a/dantex/css/style.css
+++ b/dantex/css/style.css
@@ -102,12 +102,12 @@ footer {
 
 .button {
     border-radius: 8px;
-    padding: 10px 0;
+/*    padding: 10px 0;*/
     color: #fff;
-    width: 10vw;
+    width: 12vw;
     border: 0px;
-    margin-bottom: 10em;
-    margin-right: 4vw;
+    margin-bottom: 2vh;
+    margin-right: 3vw;
     font-size: 1em;
     font-weight: 500;
     font-family: "Rajdhani";
