--- a/dantex/css/style.css
+++ b/dantex/css/style.css
@@ -1,4 +1,7 @@
 /*general style start*/
+* {
+    box-sizing: border-box;
+}
 
 body {
     width: 100%;
@@ -7,8 +10,6 @@ body {
     font-family: "Rajdhani", sans-serif;
     font-size: 1em;
     margin: 0;
-
-
 }
 
 #main-header,
@@ -21,11 +22,14 @@ footer {
     background-image: url('../img/backgroun-newsletter.svg');
     background-repeat: no-repeat;
     background-position: 90% 40%;
-    min-height: 70vh;
-    max-width: 1850px;
+    height: 70vh;
     margin: 0;
-    padding: 30px;
+}
 
+#content-inner {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto; 
 }
 
 /*general style stop*/
@@ -35,10 +39,12 @@ footer {
 #main-header {
     height: 15vh;
     min-height: 60px;
-    max-width: 1850px;
+    max-width: 1200px;
     margin: 0 auto;
+    position:relative;
     display: flex;
     align-items: center;
+    justify-content: left;
 
 }
 
@@ -106,7 +112,6 @@ footer {
     color: #fff;
     width: 12vw;
     border: 0px;
-    margin-bottom: 2vh;
     margin-right: 3vw;
     font-size: 1em;
     font-weight: 500;
