--- a/dantex/css/responsive-mobile.css
+++ b/dantex/css/responsive-mobile.css
@@ -5,10 +5,13 @@
     }
     #main-header {
         padding: 15px;
+        justify-content: center;
     }
+    
     #main-header img {
         min-height: 20px;
     }
+    
     #content {
         padding: 15px;
         height: auto;
@@ -34,6 +37,7 @@
         width: 49%;
         font-size: 16px;
         margin: 0 auto;
+        padding: 5px 0;
     }
     .button:first-child {
         margin-right: 2%;
@@ -69,7 +73,8 @@
     }
     #icon figure:last-child {
         margin: 0;
-    } {
+    } 
+    #icon {
         width: 28%;
         margin-right: 5px;
     }
