--- a/dantex/css/style.css
+++ b/dantex/css/style.css
@@ -22,7 +22,7 @@ footer {
     background-image: url('../img/backgroun-newsletter.svg');
     background-repeat: no-repeat;
     background-position: 90% 40%;
-    height: 70vh;
+    min-height: 70vh;
     margin: 0;
 }
 
