--- a/dantex/css/responsive-mobile.css
+++ b/dantex/css/responsive-mobile.css
@@ -23,15 +23,14 @@
     }
     #icon {
         width: auto;
+        text-align: center;
     }
+    
     #icon figure {
         width: 100%;
         margin: 0;
     }
-    .icons {
-        height: 15vh;
-    }
-
+    
     #buttons {
         font-size: 0px;
     }
@@ -49,44 +48,32 @@
 @media (min-width:481px) and (max-width:760px) {
     body {
         overflow: scroll;
+        text-align: center;
     }
     #main-header {
         padding: 20px;
-    }
-    #content {
-        padding: 15px;
-        height: auto;
-        background-position: 150% 10%;
-        text-align: center;
-    }
-/*
-    #content-inner {
-        text-align: center;
-    }
-*/
-
-    .icons {
-        height: 18vh;
+        justify-content: center;
     }
     
+    #content {
+        padding: 25px;
+        height: auto;
+        background-position: 150% 10%;
+        
+    }
+
+    #icon {
+        width: auto;
+    }
     #icon figure {
-        width: 28%;
+        width: 30%;
         margin-right: 10px;
     }
+    
     #icon figure:last-child {
         margin: 0;
     } 
-    #icon {
-        width: 28%;
-        margin-right: 5px;
-    }
-    
-    
-    #icon p {
-        text-align: justify;
-        margin: 0 auto;
-    }
-    
+
     #buttons {
         font-size: 0px;
     }
@@ -95,6 +82,7 @@
         width: 30%;
         font-size: 14px;
         margin: 0 auto;
+        padding: 7px;
     }
     
     .button:first-child {
