--- a/dantex/css/responsive-mobile.css
+++ b/dantex/css/responsive-mobile.css
@@ -38,7 +38,7 @@
         width: 49%;
         font-size: 16px;
         margin: 0 auto;
-        padding: 15px 0;
+        padding: 10px 0;
     }
     .button:first-child {
         margin-right: 2%;
@@ -46,6 +46,9 @@
 }
 
 @media (min-width:481px) and (max-width:760px) {
+    * { text-align: center;
+        
+    }
     body {
         overflow: scroll;
         text-align: center;
