--- a/dantex/css/responsive-mobile.css
+++ b/dantex/css/responsive-mobile.css
@@ -67,7 +67,7 @@
 
     #icon {
         width: auto;
-        text-align: center;
+        justify-content: center;
     }
     #icon figure {
         width: 30%;
