--- a/dantex/css/responsive-mobile.css
+++ b/dantex/css/responsive-mobile.css
@@ -39,6 +39,7 @@
         font-size: 16px;
         margin: 0 auto;
         padding: 5px 10px;
+        margin-top: 10px;
     }
     .button:first-child {
         margin-right: 2%;
@@ -55,10 +56,7 @@
     textarea {
         width: 80%;
     }
-    #accept, #resignation {
-        line-height: 100%;
-
-    }
+    
 }
 
 @media (min-width:481px) and (max-width:760px) {
@@ -102,8 +100,9 @@
         width: 30%;
         font-size: 14px;
         margin: 0 auto;
-        margin-bottom: 10px;
         padding: 7px;
+        margin-top: 10px;
+        
     }
     
     .button:first-child {
