--- a/dantex/css/style.css
+++ b/dantex/css/style.css
@@ -96,6 +96,7 @@ h2 {
 .lead {
     margin-bottom: 100px;
     font-size: 18px;
+    line-height: 20px;
 }
 
 /*main-info start*/
@@ -213,7 +214,7 @@ footer {
     border: 2px solid #d9232e;
     width: 12px;
     height: 12px;
-    background-color: white;
+    background-color: #fff;
     margin-left: -22px;
     float: left;
     margin-top: 3px;
@@ -226,10 +227,11 @@ footer {
 
 textarea {
     border: 1px solid #d9232e;
-    width: calc(40% + 22%);
+    width: calc(40% + 22px);
     height: 15vh;
     display: none;
     margin-left: -22px;
+    padding: 10px;
 }
 
 .radio-input {
