usunięcie br na mobile

--- a/dantex/css/responsive-mobile.css
+++ b/dantex/css/responsive-mobile.css
@@ -57,7 +57,9 @@
         width: calc(100% + 22px);
         max-width: 600px;
     }
-    
+    br {
+        display: none;
+    }
 }
 
 @media (min-width:481px) and (max-width:760px) {
@@ -122,5 +124,8 @@
     }
     textarea {
         width: 80%;
+    }
+    br {
+        display: none;
     }
 }
