--- a/szablon1/css/style.css
+++ b/szablon1/css/style.css
@@ -55,12 +55,15 @@ body {
     font-size: 65px;
     font-weight: 800;
     letter-spacing: 8px;
-    margin: 0;
+    border: 1px solid #fff;
+    border-left-style: hidden;
+    border-right-style: hidden;
+    padding: 25px 0;
 }
 
-#name p {
+#name ul li {
+    display: inline-block;
     font-size: 22px;
-    font-family: inherit;
 }
 
 hr {
@@ -110,17 +113,14 @@ hr {
     font-size: 20px;
     font-family: "Raleway";
     font-weight: 500;
-    position: relative;
     align-items: center;
+
 }
 
-/*
 .work-item-inner {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    margin: 0 auto;
+
 }
-*/
 
 #work h2 {
     font-family: "Raleway";
