--- a/formularz-colorissimo/css/style.css
+++ b/formularz-colorissimo/css/style.css
@@ -60,9 +60,17 @@ input[type=checkbox].form-check-input {
     margin-top: 20px;
 }
 
+ul{
+    margin: 0px -15px;
+}
+
+ul li {
+    width: 50%;
+}
 ul li a {
     text-decoration: none;
     font-size: 16px;
+    text-align: center;
 }
 
 #remind {
