--- a/formularz-colorissimo/css/style.css
+++ b/formularz-colorissimo/css/style.css
@@ -1,18 +1,23 @@
 body {
-    background-color: #fff;
+    background-color: #f3f3f3;
+    
+
 }
 
 
 #main-conteiner {
-    padding: 100px;
-    max-width: 600px;
-    background-color: #f3f3f3;
+    
+    padding: 70px;
+    max-width: 450px;
+    background-color: #fff;
     margin: 0 auto;
+
 }
 
 form {
     margin: 0 auto;
 }
+
 h2 {
     margin-left: -15px;
 }
@@ -28,30 +33,35 @@ h2 {
     width: 30px;
     height: 18px;
     top: 10px;
-   right: 10px;
+    right: 10px;
     opacity: .5;
-    
+
 }
 
-#password-preview:hover{
+#password-preview:hover {
     opacity: 1;
 }
 
-#check1, #check2, #check3 {
+#check1,
+#check2,
+#check3 {
     display: flex;
     width: 100%;
     margin-left: -15px;
 }
 
-#check1 label, #check2 label, #check3 label {
-   font-weight: 300;
+#check1 label,
+#check2 label,
+#check3 label {
+    font-weight: 300;
 }
 
 input[type=checkbox].form-check-input {
     margin-right: 15px;
 }
 
-#btn-reg, #btn-log, #btn-remind {
+#btn-reg,
+#btn-log {
     background-color: #3d5383;
     float: right;
     color: white;
@@ -63,17 +73,23 @@ input[type=checkbox].form-check-input {
     margin-top: 20px;
 }
 
-ul{
+ul {
     margin: 0px -15px;
 }
 
 ul li {
     width: 50%;
 }
+
 ul li a {
     text-decoration: none;
-    font-size: 16px;
+    font-size: 12px;
     text-align: center;
+    padding: 10px;
+}
+
+#btn-remind {
+    float: right;
 }
 
 #remind {
