--- a/formularz-colorissimo/css/style.css
+++ b/formularz-colorissimo/css/style.css
@@ -1,39 +1,36 @@
 body {
     background-color: #f3f3f3;
+    
 }
 
+.container {
+     max-width: 450px;
+}
+#container {
+    display: flex;
+    min-height: 100vh;
+    position: relative;
+    align-items: center;
+    padding: 30px 0px;
+}
+#main-container {
 
-#main-conteiner {
-/*
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-*/
-    max-width: 450px;
+    display: block;
     background-color: #fff;
     margin: 0 auto;
-    min-height: 0;
+    align-items: center;
+    justify-content: center;
+    
 }
 
-#main-conteiner:before {
-    min-height: 50px;
-    content: '';
-    display: block;
-    background-color: #f3f3f3
-}
 
-#logandreg, #remind {
-    padding: 50px;
-}
+colorissimo-logo
 
 form {
     margin: 0 auto;
+    padding: 30px;
 }
 
-h2 {
-    margin-left: -15px;
-}
 
 #password-div {
     position: relative;
@@ -59,8 +56,7 @@ h2 {
 #check2,
 #check3 {
     display: flex;
-    width: 100%;
-    margin-left: -15px;
+   
 }
 
 #check1 label,
@@ -101,10 +97,11 @@ ul li a {
     padding: 10px;
 }
 
-#btn-remind {
-    float: right;
-}
 
 #remind {
     display: none;
+}
+
+#btn-remind {
+    display: block;
 }
