--- a/formularz-colorissimo/css/style.css
+++ b/formularz-colorissimo/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f3f3f3;
+    background-color: #fff;
     
 }
 
@@ -13,10 +13,11 @@ body {
     align-items: center;
     padding: 30px 0px;
 }
-#main-container {
+
+#main-conteiner {
 
     display: block;
-    background-color: #fff;
+    background-color: #f3f3f3;
     margin: 0 auto;
     align-items: center;
     justify-content: center;
